--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             justify-self: flex-end;
         }
 
+        .grid div{
+            page-break-inside: avoid;
+        }
+
         .version{
             position: absolute;
             bottom: 0;
